# tox_dht_cap_farm

./: LICENSE
.github/workflows/: mesure_and_gen.yml
docs/: README.md  csv_format.md
docs/data/: 2024-06-09.csv  2024-06-10.csv  2024-06-11.csv  2024-06-12.csv  2024-06-13.csv  2024-06-14.csv  2024-06-15.csv  2024-06-16.csv  2024-06-17.csv  2024-06-18.csv  2024-06-19.csv  2024-06-20.csv  2024-06-21.csv  2024-06-22.csv  2024-06-23.csv  2024-06-24.csv  2024-06-25.csv  2024-06-26.csv  2024-06-27.csv  2024-06-28.csv  2024-06-29.csv  2024-06-30.csv  2024-07-01.csv  2024-07-02.csv  2024-07-03.csv  2024-07-04.csv  2024-07-05.csv  2024-07-06.csv  2024-07-07.csv  2024-07-08.csv  2024-07-09.csv  2024-07-10.csv  2024-07-11.csv  2024-07-12.csv  2024-07-13.csv  2024-07-14.csv  2024-07-15.csv  2024-07-16.csv  2024-07-17.csv  2024-07-18.csv  (+728 more)
plot/: .gitignore  allmavg.gnuplot  allsimple.gnuplot  filter.cpp  mavg.cpp
tool_src/: CMakeLists.txt  main.cpp
